--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,6 +9,7 @@
         <input type="text" id="burger" name="burger_name">
         <button type="submit" class="btn btn-secondary">Submit</button>
     </div>
+    </form>
     <div class="row">
         <div class="col-md-6">
         <h3>Burgers to Devour</h3>
@@ -16,7 +17,7 @@
         {{#unless this.devoured}}
         <div class="col-md-auto">
             {{this.id}}.{{this.burger_name}}
-        <button type="submit" class="btn btn-danger float-right change-devour" value={{this.id}}>Devour It!</button>
+        <button class="btn btn-danger float-right change-devour" value={{this.id}}>Devour It!</button>
         </div>
         {{/unless}}
         {{/each}}
@@ -31,4 +32,4 @@
         {{/each}}
         </div>
     </div>
-   </form>
+   
